CSS fix for z-index in PlannerCalendar

--- a/src/assets/styles/utilities/_ui.scss
+++ b/src/assets/styles/utilities/_ui.scss
@@ -185,7 +185,7 @@
   border-radius: 20px;
   box-shadow: 0 24px 48px rgba(0, 0, 0, 0.12);
   min-width: 515px;
-  z-index: 2;
+  z-index: 1;
   &.tight {
     min-width: 0;
     width: min-content;
